--- a/src/style.css
+++ b/src/style.css
@@ -657,11 +657,8 @@ header,
 }
 
 /* Section 14 */
-/* SECTION 14 */
 .section--14 {
   background-color: var(--color-beige);
-  /* Pour éviter que le contenu ne soit coupé si la grille est large */
-  overflow-x: hidden;
 
   .section__title,
   .section__desc,
@@ -669,26 +666,36 @@ header,
     color: var(--color-noir);
   }
 
-  /* --- VERSION MOBILE (Par défaut) --- */
   .section__content {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+
+    grid-template-columns: 1fr 30rem 1fr;
+
+    grid-template-rows: auto auto auto;
+
+    grid-template-areas:
+      ".         top          ."
+      "left-top  center       right-top"
+      "left-bot  center       right-bot";
+
     align-items: center;
-    gap: 2rem;
+    justify-items: center;
+    width: 100%;
+    max-width: 90rem;
     margin-inline: auto;
+    padding-top: 2rem;
   }
 
-  /* Style de base des flaques (texte) */
   .section__flaque-text {
-    width: 20rem; /* Taille plus petite pour rentrer autour de la carte */
-    min-height: 14rem;
-    padding: 3rem; /* Ajusté pour la taille */
+    width: 22rem;
+    min-height: 15rem;
+    padding: 3.5rem;
 
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: 1rem; /* Texte un peu plus petit pour tout faire rentrer */
+    font-size: 1.1rem;
     line-height: 1.3;
 
     background-repeat: no-repeat;
@@ -697,113 +704,94 @@ header,
     margin: 0;
   }
 
-  /* Attribution des images (vos images SVG) */
   .section__flaque-text--1 {
+    grid-area: top;
+    color: red;
     background-image: url("/flaque1.svg");
+    margin-bottom: -5rem;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
   }
+
   .section__flaque-text--2 {
+    grid-area: right-top;
     background-image: url("/flaque2.svg");
+    justify-self: start;
+    align-self: end;
+    margin-left: -4rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
   }
+
   .section__flaque-text--3 {
+    grid-area: right-bot;
     background-image: url("/flaque3.svg");
+    justify-self: start;
+    align-self: start;
+    margin-left: -2rem;
+    margin-top: -2rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
   }
+
   .section__flaque-text--4 {
+    grid-area: left-bot;
     background-image: url("/flaque4.svg");
+    justify-self: end;
+    align-self: start;
+    margin-right: -2rem;
+    margin-top: -2rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
   }
+
   .section__flaque-text--5 {
+    grid-area: left-top;
     background-image: url("/flaque5.svg");
+    justify-self: end;
+    align-self: end;
+    margin-right: -4rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+  }
+
+  .dataviz--14 {
+    grid-area: center;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
   }
 
   .section__canvas--14 {
-    width: 100%;
-    max-width: 25rem; /* Taille de la carte sur mobile */
+    width: 100rem;
     height: auto;
-    aspect-ratio: 1/1;
-  }
-
-  /* --- VERSION ORDINATEUR (Desktop) --- */
-  /* On active la grille complexe uniquement si l'écran est assez grand */
-  @media (min-width: 1200px) {
-    .section__content {
-      display: grid;
-      /* 3 colonnes : Gauche | Centre (Carte) | Droite */
-      grid-template-columns: 1fr 28rem 1fr;
-      /* 3 lignes pour gérer la hauteur */
-      grid-template-rows: auto auto auto;
-      /* On nomme les zones pour placer facilement les éléments */
-      grid-template-areas:
-        ".        top          ."
-        "left     center       right"
-        "left-bot center       right-bot";
-
-      align-items: center;
-      justify-items: center;
-      gap: 1rem;
-      width: 100%;
-      max-width: 90rem; /* Limite la largeur totale */
-    }
-
-    /* Ajustement de la taille des flaques sur grand écran */
-    .section__flaque-text {
-      width: 22rem;
-      min-height: 16rem;
-      font-size: 1.1rem;
-    }
-
-    /* --- PLACEMENT DES ÉLÉMENTS (Selon votre image) --- */
-
-    /* 1. "En été..." (Haut Centre) */
-    .section__flaque-text:nth-of-type(1) {
-      grid-area: top;
-      margin-bottom: -4rem; /* Chevauchement léger vers la carte */
-      z-index: 2;
-    }
-
-    /* 2. "Une nappe..." (Milieu Droite) */
-    .section__flaque-text:nth-of-type(2) {
-      grid-area: right;
-      justify-self: start; /* Collé à gauche de sa colonne */
-      margin-left: -3rem;
-    }
-
-    /* 3. "Les précipitations..." (Bas Droite) */
-    .section__flaque-text:nth-of-type(3) {
-      grid-area: right-bot;
-      align-self: start; /* Remonte un peu */
-    }
-
-    /* 4. LE CANVAS (Carte de France au centre) */
-    .dataviz--14 {
-      grid-area: center;
-      z-index: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .section__canvas--14 {
-      max-width: 100%; /* La carte prend toute la place de la colonne centrale */
-      width: 35rem; /* Taille fixe plus grande sur bureau */
-    }
-
-    /* 5. "En août..." (Bas Gauche) */
-    /* Attention : HTML dit que c'est le 4ème <p> (après le dataviz) */
-    .section__flaque-text:nth-of-type(4) {
-      grid-area: left-bot;
-      justify-self: end; /* Poussé vers la droite */
-      align-self: start;
-    }
-
-    /* 6. "Certaines régions..." (Milieu Gauche) */
-    /* C'est le 5ème <p> */
-    .section__flaque-text:nth-of-type(5) {
-      grid-area: left;
-      justify-self: end; /* Poussé vers la droite pour se rapprocher de la carte */
-      margin-right: -3rem;
-    }
+    object-fit: contain;
   }
 }
-
 /* Footer */
 
 .section--footer {
