--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,9 @@ picture {
   max-width: 100%;
   display: block;
 }
+svg {
+  overflow: visible;
+}
 
 input,
 button,
@@ -686,11 +689,11 @@ header,
     padding-top: 2rem;
   }
 
+  /* --- STYLE GÉNÉRAL DES FLAQUES DE TEXTE --- */
   .section__flaque-text {
-    width: 22rem;
-    min-height: 15rem;
-    padding: 3.5rem;
-
+    width: 24rem;
+    min-height: 16rem;
+    padding: 4rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -700,22 +703,16 @@ header,
 
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 100% 100%;
+
+    background-size: contain;
     margin: 0;
   }
 
   .section__flaque-text--1 {
     grid-area: top;
-    color: red;
     background-image: url("/flaque1.svg");
-    margin-bottom: -5rem;
+    margin-bottom: -6rem;
     z-index: 2;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
   }
 
   .section__flaque-text--2 {
@@ -723,13 +720,7 @@ header,
     background-image: url("/flaque2.svg");
     justify-self: start;
     align-self: end;
-    margin-left: -4rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
+    margin-left: -5rem;
   }
 
   .section__flaque-text--3 {
@@ -739,12 +730,6 @@ header,
     align-self: start;
     margin-left: -2rem;
     margin-top: -2rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
   }
 
   .section__flaque-text--4 {
@@ -754,12 +739,6 @@ header,
     align-self: start;
     margin-right: -2rem;
     margin-top: -2rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
   }
 
   .section__flaque-text--5 {
@@ -767,15 +746,8 @@ header,
     background-image: url("/flaque5.svg");
     justify-self: end;
     align-self: end;
-    margin-right: -4rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
+    margin-right: -5rem;
   }
-
   .dataviz--14 {
     grid-area: center;
     z-index: 1;
