--- a/src/style.css
+++ b/src/style.css
@@ -689,11 +689,9 @@ header,
     padding-top: 2rem;
   }
 
-  /* --- STYLE GÉNÉRAL DES FLAQUES DE TEXTE --- */
   .section__flaque-text {
     width: 24rem;
     min-height: 16rem;
-    padding: 4rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -711,8 +709,9 @@ header,
   .section__flaque-text--1 {
     grid-area: top;
     background-image: url("/flaque1.svg");
+    background-size: 130%;
     margin-bottom: -6rem;
-    z-index: 2;
+    overflow: visible;
   }
 
   .section__flaque-text--2 {
@@ -721,6 +720,7 @@ header,
     justify-self: start;
     align-self: end;
     margin-left: -5rem;
+    max-width: 20rem;
   }
 
   .section__flaque-text--3 {
